Refactored code to get rid of old legacy code.